binary 1.2022.6 from puni2